<resources>
    <string name="app_name">Communication</string>

    <string name="loading">正在加载中...</string>
    <string name="load_failed">加载失败，请点我重试</string>
    <string name="load_end">没有更多数据</string>

    <string name="hint_login_username">请输入手机号码</string>
    <string name="hint_login_password">输入密码</string>
    <string name="login">登录</string>
    <string name="forget_pwd">忘记密码</string>

    <string name="permission_cancel">取消</string>
    <string name="permission_setting">去设置</string>
    <string name="permission_title_permission_failed">权限申请失败</string>
    <string name="permission_message_permission_failed">我们需要的一些权限被您拒绝或者系统发生错误申请失败，请您到设置页面手动授权，否则功能无法正常使用！</string>
    <string name="permission_resume">继续</string>
    <string name="permission_title_permission_rationale">权限已被拒绝</string>
    <string name="permission_message_permission_rationale">您已经拒绝过我们申请授权，请您同意授权，否则功能无法正常使用！</string>
    <string name="name">姓名</string>
    <string name="message">这是一条记录</string>
    <string name="timestamp">2017-17-17</string>
    <string name="chat">聊天</string>
    <string name="friend">好友</string>
    <string name="send">发送</string>
    <string name="all_image">全部图片</string>
    <string name="piece">张</string>
    <string name="take_picture">拍照</string>
    <string name="all_picture">全部图片</string>
    <string name="complete">完成</string>
    <string name="select_picture">选择图片</string>
    <string name="logout">注销</string>
    <string name="not_supported">不支持</string>
    <string name="click_to_record">点击录音</string>
    <string name="cancel">取消</string>
    <string name="get_user_info_failed">获取用户信息失败</string>
    <string name="confirm">确定</string>
    <string name="file_not_exist">文件不存在</string>
    <string name="download">下载</string>
    <string name="invalid_file">无效文件</string>
    <string name="file_to_large">文件过大</string>
    <string name="download_failed">下载失败</string>

    <string name="hint">提示</string>
    <string name="imageView_content_description"></string>
    <string name="record_camera_progress_message">正在转码…</string>
    <string name="record_camera_exit_dialog_message">取消录制视频?</string>
    <string name="record_camera_cancel_dialog_yes">确定</string>
    <string name="record_camera_cancel_dialog_no">取消</string>
    <string name="record_video_transcoding_faild">视频转码失败</string>
    <string name="download_success">下载成功</string>
</resources>
