<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="50dp">

    <ImageView
        android:id="@+id/chatRecordItem_avatar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="12dp"/>

    <TextView
        android:id="@+id/chatRecordItem_timeTextView"
        style="@style/textSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="8dp"
        android:layout_marginRight="12dp"
        android:text="@string/timestamp"
        android:textColor="@color/color_999999"/>

    <TextView
        android:id="@+id/chatRecordItem_nameTextView"
        style="@style/textMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_toLeftOf="@id/chatRecordItem_timeTextView"
        android:layout_toRightOf="@id/chatRecordItem_avatar"
        android:gravity="center_vertical"
        android:text="@string/name"/>

    <TextView
        android:id="@+id/chatRecordItem_messageTextView"
        style="@style/textSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/chatRecordItem_nameTextView"
        android:layout_below="@id/chatRecordItem_nameTextView"
        android:layout_marginRight="12dp"
        android:layout_toRightOf="@id/chatRecordItem_avatar"
        android:text="@string/message"
        android:textColor="@color/color_999999"/>


</RelativeLayout>