<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBarHeight"
        android:background="@color/db32323d"
        android:paddingTop="@dimen/statusBarHeight">

        <ImageView
            android:id="@+id/btn_backPress"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:background="@drawable/sel_back_press"
            android:paddingBottom="14dp"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:paddingTop="14dp"
            android:src="@mipmap/ic_back" />

        <View
            android:id="@+id/line"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@id/btn_backPress"
            android:background="#cc111111" />

        <TextView
            style="@style/textMedium"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/line"
            android:text="@string/select_picture"
            android:textColor="@color/white" />

        <TextView
            style="@style/titleButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:clickable="true"
            android:text="@string/complete"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>


    <GridView
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#111111"
        android:clipToPadding="false"
        android:horizontalSpacing="2dp"
        android:listSelector="@android:color/transparent"
        android:numColumns="3"
        android:paddingBottom="50dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:paddingTop="2dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="2dp" />

    <RelativeLayout
        android:id="@+id/footer_panel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#fc22292c">

        <Button
            android:id="@+id/btn_dir"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@null"
            android:drawablePadding="4dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:singleLine="true"
            android:text="@string/all_picture"
            android:textColor="#ffffff"
            android:textSize="16sp" />


    </RelativeLayout>
</LinearLayout>